# slam-bot-platform

./: .gitmodules  README.md
slambot_driver/slambot_controller/: CMakeLists.txt  package.xml
slambot_driver/slambot_controller/config/: diff_drive_controller.yaml
slambot_driver/slambot_controller/launch/: diff_drive_controller.launch
slambot_driver/slambot_controller/urdf/: slambot.urdf.xacro
slambot_driver/slambot_sdk/: CMakeLists.txt  package.xml
slambot_driver/slambot_sdk/include/: encoder_motor.h
slambot_driver/slambot_sdk/src/: encoder_motor.cpp  main.cpp
